k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myjobplanner-dinero
  labels:
    app: myjobplanner-dinero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myjobplanner-dinero
  template:
    metadata:
      labels:
        app: myjobplanner-dinero
    spec:
      containers:
        - name: myjobplanner-dinero
          image: gcr.io/myjobplanner-1520708021669/myjobplanner-dinero:1a389d8e-7e37-402e-a1af-96b21f5893ca
          ports:
            - containerPort: 4000
              name: http
          livenessPrope:
            httpGet:
              path: /health/liveness
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          readinessPrope:
            httpGet:
              path: /health/readiness
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
