k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myjobplanner-dinero-service
  labels:
    app: myjobplanner-dinero
spec:
  selector:
    app: myjobplanner-dinero
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 32131
    port: 80
    targetPort: 8080
