k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myjobplanner-dinero
spec:
  rules:
  - host: dinero.myjobplanner.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: myjobplanner-dinero
          servicePort: 80
